--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>First Github</title>
 </head>
 <body>
-   <h1>Github</h1>
+   <h1>This content belongs to master branch</h1>
     
+    <script src="js/index.js"></script>
 </body>
 </html>
